# sparkscope

./: .gitignore  Dockerfile  README.md  app.py  commands.py  config.demo.yaml  config.example.yaml  db.py  mock_collector.py  pyproject.toml  ssh_collector.py  vllm_collector.py
deploy/: README.md  huggingface_readme.md
docs/: app.js  demo_mock.js  index.html  styles.css
launchd/: gb10-dashboard.plist.example
static/: app.js  index.html
